--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -130,7 +130,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/5K7qxX77PJXWuzkZD8rOBduCEKo.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Mi pobre y dulce angelito 2021</span>
-    <span class="hidden">La familia se fue a Japón por las fiestas y, entre la confusión y el apuro, dejó a Max solo en casa con sus diez añitos. Y eso no es todo: una pareja de vecinos está desesperada por recuperar una reliquia invaluable y trata de entrar a hurtadillas. ¿El pobre y dulce angelito? Tiene un arsenal de trampas desopilantes para ellos. No hay lugar como el hogar, dulce hogar.</span>
+    <span class="hidden">solo en casa  por fin  6 La familia se fue a Japón por las fiestas y, entre la confusión y el apuro, dejó a Max solo en casa con sus diez añitos. Y eso no es todo: una pareja de vecinos está desesperada por recuperar una reliquia invaluable y trata de entrar a hurtadillas. ¿El pobre y dulce angelito? Tiene un arsenal de trampas desopilantes para ellos. No hay lugar como el hogar, dulce hogar.</span>
   </a>
 </li>
 <!--FIN--><!-- Mi pobre angelito 5 -->
@@ -139,7 +139,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/nxxcHTbqNrEkrJvtCzxzm3TDtU.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Mi pobre angelito 5 2012</span>
-    <span class="hidden">Finn Baxter y su familia se mudan de California a Maine a su nueva casa. Finn está aterrorizado y cree que la casa está embrujada. Mientras que instala trampas para coger al "fantasma", sus padres se quedan varados en la ciudad y Finn se quedá solo en casa con su hermana. Lo que no esperaban, es que su casa se convierte en el objetivo de tres ladrones en busca de un botín especial.</span>
+    <span class="hidden">solo en casa Finn Baxter y su familia se mudan de California a Maine a su nueva casa. Finn está aterrorizado y cree que la casa está embrujada. Mientras que instala trampas para coger al "fantasma", sus padres se quedan varados en la ciudad y Finn se quedá solo en casa con su hermana. Lo que no esperaban, es que su casa se convierte en el objetivo de tres ladrones en busca de un botín especial.</span>
   </a>
 </li>
 <!--FIN--><!-- Mi pobre angelito 4 -->
@@ -148,7 +148,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/q9BAc2Q37oQWcRlMKUkuRilJ90E.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Mi pobre angelito 4 2002</span>
-    <span class="hidden">Después del reciente divorcio de sus padres, Kevin decide pasar la Navidad en casa de Natalie, la nueva novia de su padre, una casa equipada con la más moderna tecnología. Con la ayuda de esta tecnología y haciendo uso de su habitual ingenio, Kevin deberá hacer frente a unos ladrones, además de intentar conseguir que sus progenitores se reconcilien. Nueva entrega de la popular saga de "Solo en casa", que en esta ocasión, y tras perder progresivamente calidad y taquilla en las anteriores, ya se hizo directamente para la televisión y el mercado de video.</span>
+    <span class="hidden">solo en casa  Después del reciente divorcio de sus padres, Kevin decide pasar la Navidad en casa de Natalie, la nueva novia de su padre, una casa equipada con la más moderna tecnología. Con la ayuda de esta tecnología y haciendo uso de su habitual ingenio, Kevin deberá hacer frente a unos ladrones, además de intentar conseguir que sus progenitores se reconcilien. Nueva entrega de la popular saga de "Solo en casa", que en esta ocasión, y tras perder progresivamente calidad y taquilla en las anteriores, ya se hizo directamente para la televisión y el mercado de video.</span>
   </a>
 </li>
 <!--FIN--><!-- Mi pobre angelito 3 -->
@@ -157,7 +157,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/720eeviFT6G8SStX2lEgFsYzqAp.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Mi pobre angelito 3 1997</span>
-    <span class="hidden">Cuatro espías de alta tecnología industrial roban un microchip ultrasecreto y confiadamente lo ocultan en un coche de juguete de control remoto. Por causa de una confusión de equipajes en el aeropuerto, la anciana señora Hess recoge el juguete y se lo regala a su vecino de ocho años Alex. Los espías desearán recuperar el valioso chip a toda costa, pero Alex está preparado para darles una cálida bienvenida.</span>
+    <span class="hidden">solo en casa  Cuatro espías de alta tecnología industrial roban un microchip ultrasecreto y confiadamente lo ocultan en un coche de juguete de control remoto. Por causa de una confusión de equipajes en el aeropuerto, la anciana señora Hess recoge el juguete y se lo regala a su vecino de ocho años Alex. Los espías desearán recuperar el valioso chip a toda costa, pero Alex está preparado para darles una cálida bienvenida.</span>
   </a>
 </li>
 <!--FIN--><!-- Mi pobre angelito 2: Perdido en Nueva York -->
@@ -166,7 +166,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/7sdiRUyc0ANHJptPhsgb1KL6hoq.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Mi pobre angelito 2: Perdido en Nueva York 1992</span>
-    <span class="hidden">En plenas fiestas navideñas, el pequeño Kevin y su familia están a punto de coger un avión para disfrutar de unas pequeñas vacaciones, pero Kevin se equivoca y embarca en un avión que lo lleva a Nueva York, donde vuelve a encontrarse solo y desprotegido.</span>
+    <span class="hidden">solo en casa  En plenas fiestas navideñas, el pequeño Kevin y su familia están a punto de coger un avión para disfrutar de unas pequeñas vacaciones, pero Kevin se equivoca y embarca en un avión que lo lleva a Nueva York, donde vuelve a encontrarse solo y desprotegido.</span>
   </a>
 </li>
 <!--FIN--><!-- Mi pobre angelito -->
@@ -175,7 +175,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/rjc2a9N5pro1xGsSvvnJ1JDXRGm.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Mi pobre angelito 1990</span>
-    <span class="hidden">Kevin McAllister es un niño de ocho años, miembro de una familia numerosa que accidentalmente se queda abandonado en su casa cuando toda la familia se marcha a pasar las vacaciones a Francia. Kevin aprende a valerse por sí mismo e incluso a protegerse de dos bribones que se proponen asaltar todas las casas cerradas de su vecindario.</span>
+    <span class="hidden">solo en casa 1 Kevin McAllister es un niño de ocho años, miembro de una familia numerosa que accidentalmente se queda abandonado en su casa cuando toda la familia se marcha a pasar las vacaciones a Francia. Kevin aprende a valerse por sí mismo e incluso a protegerse de dos bribones que se proponen asaltar todas las casas cerradas de su vecindario.</span>
   </a>
 </li>
 <!--FIN--><!-- ¡Quieren volverme loco! -->
