--- a/Plataforma/navidad/index.html
+++ b/Plataforma/navidad/index.html
@@ -13,6 +13,7 @@
   <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
 </head>
 <body class="bg-[#04143B] text-white min-h-screen">
+  
  	<div id="preloader">
   <div class="preloader-content">
     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi3dK3-XAKrEia-lWmiUqAYRfFQ1lR9eJX6ZZH8e_vHf576qf9GJjIWBW9Jg5LsilXX7WO2MOEkg5gzc4pESziaPeMJ9ws9mwtCDdp3p_17D0e0Uop_ZxavwwJeNLBvoyZJ0cxTKQpjzrJIR6LjJslB24tj-77AYrRCacQ3F2S2VPoXpPzPhM1zndxyd1Rg/s3307/B64D5386-DCA4-410B-A0A6-6ACB19D0A06F.png" alt="Logo Preloader" />
@@ -115,6 +116,29 @@
 @keyframes spin {
   to { transform: rotate(360deg); }
 }
+
+  #navidad-copos {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  overflow: hidden;
+  z-index: 9999;
+}
+
+.navidad-flake {
+  position: absolute;
+  top: -50px;
+  animation-name: navidad-fall;
+  animation-timing-function: linear;
+}
+
+@keyframes navidad-fall {
+  0% { transform: translateY(-50px) rotate(0deg); opacity: 1; }
+  100% { transform: translateY(110vh) rotate(360deg); opacity: 0.7; }
+}
 </style>
 
 <script>
@@ -130,7 +154,11 @@ document.addEventListener("DOMContentLoaded", () => {
     preloader.classList.add("hide");
   }, ms);
 });
-</script> <header class="fixed top-0 left-0 w-full z-50 bg-[#04143B] flex flex-col md:flex-row items-center justify-between px-4 py-3 max-w-[1280px] mx-auto">
+</script> 
+  <!-- EFECTO NAVIDAD-->
+  <div id="navidad-copos"></div>
+  
+  <header class="fixed top-0 left-0 w-full z-50 bg-[#04143B] flex flex-col md:flex-row items-center justify-between px-4 py-3 max-w-[1280px] mx-auto">
     <div class="flex items-center space-x-4 w-full md:w-auto justify-between">
       <div class="flex flex-row items-center space-x-3 mb-6">
         <button onclick="history.back()" class="bg-[#0D1B4C] rounded-full px-4 py-1.5 text-sm font-semibold text-[#4A7FFF] flex items-center space-x-1 focus:outline-none focus:ring-2 focus:ring-[#4A7FFF]">
@@ -272,8 +300,6 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="mt-2 font-semibold text-sm leading-tight truncate">Los tipos malos: Una Navidad muy mala</div>
   <div class="text-xs text-white/70">2023</div>
 </article>
-
-
 <!-- Los que se quedan -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula37.html">
@@ -285,8 +311,42 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="mt-2 font-semibold text-sm leading-tight truncate">Los que se quedan</div>
   <div class="text-xs text-white/70">2023</div>
 </article>
-
-    </section>
+</section>
   </main>
+    <script>
+  var navidadBolas = [
+    "https://www.pngkey.com/png/full/106-1064715_bola-para-arbol-de-navidad-rojo-esfera-de.png",
+    "https://static.vecteezy.com/system/resources/previews/013/516/096/non_2x/golden-christmas-ball-luxury-hanging-bauble-png.png"
+  ];
+
+  function navidadCrearCopo() {
+    var copo = document.createElement("div");
+    copo.classList.add("navidad-flake");
+
+    var tipo = Math.random();
+    if (tipo < 0.5) {
+      // Copo de nieve emoji
+      copo.textContent = "❄️";
+      copo.style.fontSize = Math.random() * 24 + 16 + "px";
+      copo.style.color = "white";
+    } else {
+      // Bolita navideña
+      var img = document.createElement("img");
+      img.src = navidadBolas[Math.floor(Math.random() * navidadBolas.length)];
+      img.style.width = (Math.random() * 30 + 25) + "px";
+      img.style.height = "auto";
+      copo.appendChild(img);
+    }
+
+    copo.style.left = Math.random() * window.innerWidth + "px";
+    copo.style.animationDuration = (Math.random() * 5 + 5) + "s";
+
+    document.getElementById("navidad-copos").appendChild(copo);
+
+    setTimeout(() => { copo.remove(); }, 10000);
+  }
+
+  setInterval(navidadCrearCopo, 300);
+</script>  
 </body>
 </html>
