Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi pobre y dulce angelito -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Caceria Sangrienta -->
+<li>
+  <a href="../Peliculas/pelicula688.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/kI24vnBopz6GPXdXWdQzc4GTRVZ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Cacería Sangrienta 2024</span>
+    <span class="hidden">Un grupo de jóvenes activistas decide hacer una declaración ambiental vandalizando una tienda de artículos para el hogar justo cuando la tienda está por cerrar. Pero su plan sale terriblemente mal cuando quedan atrapados dentro y deben enfrentarse a un guardia de seguridad trastornado con una pasión macabra por la caza primitiva. A medida que la noche se llena de violencia y terror, los adolescentes se encuentran en una lucha desesperada por sus vidas.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mi pobre y dulce angelito -->
 <li>
   <a href="../Peliculas/pelicula687.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
