--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -73,7 +73,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi pobre y dulce angelito -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- La princesa y el sapo -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula689.html">
+    <img src="https://image.tmdb.org/t/p/original/lSNqVycC40mujo0tiRZvp6Ef5qQ.jpg" alt="La princesa y el sapo" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La princesa y el sapo</div>
+  <div class="text-xs text-white/70">2009</div>
+</article><!-- Mi pobre y dulce angelito -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula687.html">
     <img src="https://image.tmdb.org/t/p/original/5K7qxX77PJXWuzkZD8rOBduCEKo.jpg" alt="Mi pobre y dulce angelito" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
