--- a/Plataforma/disney/index.html
+++ b/Plataforma/disney/index.html
@@ -183,7 +183,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El extrano mundo de Jack -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- La princesa y el sapo -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula689.html">
+    <img src="https://image.tmdb.org/t/p/original/lSNqVycC40mujo0tiRZvp6Ef5qQ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">La princesa y el sapo</div>
+  <div class="text-xs text-white/70">2009</div>
+</article><!-- El extrano mundo de Jack -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula680.html">
     <img src="https://image.tmdb.org/t/p/original/pqFPpQ77VZ0moRgRRsxx7p39CS3.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
