Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Caceria Sangrienta -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La princesa y el sapo -->
+<li>
+  <a href="../Peliculas/pelicula689.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/lSNqVycC40mujo0tiRZvp6Ef5qQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La princesa y el sapo 2009</span>
+    <span class="hidden">Tiana, una muchacha de origen humilde que vive en Nueva Orleans, trabaja como camarera y cocinera para conseguir realizar el sueño que compartió con su padre, conseguir abrir su propio restaurante. Pero todo cambia cuando el Príncipe Naveen, heredero de la corona de Maldonia, llega a la ciudad. En su camino se cruza el Doctor Facilier, un brujo vudú que engaña al príncipe y lo convierte en un sapo. Atrapado en su nueva forma, Naveen intentará romper el encantamiento utilizando la forma clásica de los cuentos, es decir, con el beso de una princesa. Convence a Tiana para que le bese pero, las cosas no son tan sencillas.</span>
+  </a>
+</li>
+<!--FIN--><!-- Caceria Sangrienta -->
 <li>
   <a href="../Peliculas/pelicula688.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
