Crear/Actualizar Categorias/comedia/index.html

--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -40,7 +40,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi pobre y dulce angelito -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¡Oye, Arnold! -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie73.html">
+    <img src="https://image.tmdb.org/t/p/original/1aHnP8oed54UMLEvTlY7VBl069q.jpg" alt="¡Oye, Arnold!" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">¡Oye, Arnold!</div>
+  <div class="text-xs text-white/70">1996</div>
+</article><!-- Mi pobre y dulce angelito -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula687.html">
     <img src="https://image.tmdb.org/t/p/original/5K7qxX77PJXWuzkZD8rOBduCEKo.jpg" alt="Mi pobre y dulce angelito" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
