--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La princesa y el sapo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¡Oye, Arnold! -->
+<li>
+  <a href="../Series/serie73.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/1aHnP8oed54UMLEvTlY7VBl069q.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">¡Oye, Arnold! 1996</span>
+    <span class="hidden">La vida cotidiana de Arnold, un niño de cuarto grado en una ciudad sin nombre que se parece a Brooklyn, que vive en una pensión multirracial con sus abuelos y un variado grupo de amigos y vecinos.</span>
+  </a>
+</li>
+<!--FIN--><!-- La princesa y el sapo -->
 <li>
   <a href="../Peliculas/pelicula689.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
