Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¡Oye, Arnold! -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un show mas -->
+<li>
+  <a href="../Series/serie74.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6xea7V4d2xayrlBKOtMZ4wlV6wZ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Un show más 2010</span>
+    <span class="hidden">Mordecai (un arrendajo azul) y Rigby (un mapache) son encargados de mantenimiento en un parque, y buscan cualquier excusa para no trabajar. En su día a día viven múltiples aventuras, muchas de ellas de carácter surrealista, en las que también interactúan el resto de personajes.</span>
+  </a>
+</li>
+<!--FIN--><!-- ¡Oye, Arnold! -->
 <li>
   <a href="../Series/serie73.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
