--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un show mas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Yo soy Betty, la fea -->
+<li>
+  <a href="../Series/serie75.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/iEBOiXiDGaxVR6w8aKgG5MEusuO.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Yo soy Betty, la fea 1999</span>
+    <span class="hidden">Beatriz Aurora Pinzón Solano (Ana María Orozco), comúnmente conocida como "Betty", es una economista joven y brillante, aunque poco atractiva, que vive con sus padres en Bogotá. Luego de muchas dificultades para conseguir empleo, Betty comienza a trabajar como secretaria de presidencia en una empresa llamada Ecomoda. Su jefe inmediato es el recién nombrado presidente Armando Mendoza (Jorge Enrique Abello) quien se encuentra comprometido con Marcela Valencia (Natalia Ramírez), quien también ocupa un cargo ejecutivo en la empresa.</span>
+  </a>
+</li>
+<!--FIN--><!-- Un show mas -->
 <li>
   <a href="../Series/serie74.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
