Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Yo soy Betty, la fea -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ghost: La Sombra del Amor -->
+<li>
+  <a href="../Peliculas/pelicula690.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/gR8np00iNFdMOsoCDTlcUjkGcCC.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Ghost: La Sombra del Amor 1990</span>
+    <span class="hidden">Una pareja de enamorados ve truncada su felicidad cuando él muere a manos de un ladrón. La necesidad de salvar la vida a la chica hace que él permanezca en la Tierra en forma de fantasma, e intente advertirla del peligro que corre. Su único medio de comunicación es una alocada vidente.</span>
+  </a>
+</li>
+<!--FIN--><!-- Yo soy Betty, la fea -->
 <li>
   <a href="../Series/serie75.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
