--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -73,7 +73,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- ¡Oye, Arnold! -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Simpson -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie76.html">
+    <img src="https://image.tmdb.org/t/p/original/gpGPI732PWspwGpPyWrWov8IYmq.jpg" alt="Los Simpson" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los Simpson</div>
+  <div class="text-xs text-white/70">1989</div>
+</article><!-- ¡Oye, Arnold! -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie73.html">
     <img src="https://image.tmdb.org/t/p/original/1aHnP8oed54UMLEvTlY7VBl069q.jpg" alt="¡Oye, Arnold!" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
