--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Ghost: La Sombra del Amor -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Simpson -->
+<li>
+  <a href="../Series/serie76.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/gpGPI732PWspwGpPyWrWov8IYmq.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Simpson 1989</span>
+    <span class="hidden">Ubicado en Springfield, la ciudad estadounidense promedio, se centra en las travesuras y aventuras cotidianas de la familia Simpson; Homero, Marge, Bart, Lisa y Maggie, así como un reparto virtual de miles.</span>
+  </a>
+</li>
+<!--FIN--><!-- Ghost: La Sombra del Amor -->
 <li>
   <a href="../Peliculas/pelicula690.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
