--- a/HOME/login.html
+++ b/HOME/login.html
@@ -148,6 +148,16 @@ button {
   .edit-icon { width: 22px; height: 22px; font-size: 11px; }
 }
 </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PC9JETB0VP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PC9JETB0VP');
+</script>
+
 </head>
 <body class="flex flex-col justify-center items-center min-h-screen relative">
 
