--- a/Plataforma/cinecristiano/index.html
+++ b/Plataforma/cinecristiano/index.html
@@ -9,6 +9,16 @@
   <style>
     body { font-family: "Poppins", sans-serif; }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PC9JETB0VP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PC9JETB0VP');
+</script>
+
   <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
 </head>
 <body class="bg-[#04143B] text-white min-h-screen">
