--- a/index.html
+++ b/index.html
@@ -137,10 +137,12 @@ document.addEventListener("DOMContentLoaded", async () => {
   lazyLoadImages();
 });
 
-	 var _0x1a2b=navigator.userAgent||navigator.vendor||window.opera;function _0x3c4d(){return/iPad|iPhone|iPod/.test(_0x1a2b)&&!window.MSStream}function _0x5e6f(){return _0x3c4d()&&/Safari/.test(_0x1a2b)&&!/CriOS|FxiOS|OPiOS|EdgiOS/.test(_0x1a2b)}function _0x7a8b(){return/Android/.test(_0x1a2b)}function _0x9c0d(){return!_0x3c4d()&&!_0x7a8b()}if(!_0x5e6f()){document.documentElement.innerHTML='';var _0x2d4e=document.createElement('div');_0x2d4e.style.position='fixed';_0x2d4e.style.top='0';_0x2d4e.style.left='0';_0x2d4e.style.width='100%';_0x2d4e.style.height='100%';_0x2d4e.style.display='flex';_0x2d4e.style.justifyContent='center';_0x2d4e.style.alignItems='center';_0x2d4e.style.backgroundColor='#000';_0x2d4e.style.color='#fff';_0x2d4e.style.fontSize='24px';_0x2d4e.style.textAlign='center';_0x2d4e.style.padding='20px';_0x2d4e.innerText="Acceso denegado.\nEsta p\xE1gina solo se puede abrir desde Safari en iOS.";document.body.appendChild(_0x2d4e);setTimeout(function(){window.open('','_self').close()},100)}
-</script>
+	</script>
 
 </head>
+	<script>
+		 var _0x1a2b=navigator.userAgent||navigator.vendor||window.opera;function _0x3c4d(){return/iPad|iPhone|iPod/.test(_0x1a2b)&&!window.MSStream}function _0x5e6f(){return _0x3c4d()&&/Safari/.test(_0x1a2b)&&!/CriOS|FxiOS|OPiOS|EdgiOS/.test(_0x1a2b)}function _0x7a8b(){return/Android/.test(_0x1a2b)}function _0x9c0d(){return!_0x3c4d()&&!_0x7a8b()}if(!_0x5e6f()){document.documentElement.innerHTML='';var _0x2d4e=document.createElement('div');_0x2d4e.style.position='fixed';_0x2d4e.style.top='0';_0x2d4e.style.left='0';_0x2d4e.style.width='100%';_0x2d4e.style.height='100%';_0x2d4e.style.display='flex';_0x2d4e.style.justifyContent='center';_0x2d4e.style.alignItems='center';_0x2d4e.style.backgroundColor='#000';_0x2d4e.style.color='#fff';_0x2d4e.style.fontSize='24px';_0x2d4e.style.textAlign='center';_0x2d4e.style.padding='20px';_0x2d4e.innerText="Acceso denegado.\nEsta p\xE1gina solo se puede abrir desde Safari en iOS.";document.body.appendChild(_0x2d4e);setTimeout(function(){window.open('','_self').close()},100)}
+			 </script>
 <body class="antialiased">
 
  <!-- NAV -->
@@ -763,6 +765,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 </body>
 </html>
+
 
 
 
