--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ document.addEventListener("DOMContentLoaded", async () => {
   await cargarHero();
   lazyLoadImages();
 });
-var _0x1a2b=navigator.userAgent||navigator.vendor||window.opera;function _0x3c4d(){return/iPad|iPhone|iPod/.test(_0x1a2b)&&!window.MSStream}function _0x5e6f(){return _0x3c4d()&&/Safari/.test(_0x1a2b)&&!/CriOS|FxiOS|OPiOS|EdgiOS/.test(_0x1a2b)}function _0x7a8b(){return/Android/.test(_0x1a2b)}function _0x9c0d(){return!_0x3c4d()&&!_0x7a8b()}if(!_0x5e6f()){document.documentElement.innerHTML='';var _0x2d4e=document.createElement('div');_0x2d4e.style.position='fixed';_0x2d4e.style.top='0';_0x2d4e.style.left='0';_0x2d4e.style.width='100%';_0x2d4e.style.height='100%';_0x2d4e.style.display='flex';_0x2d4e.style.justifyContent='center';_0x2d4e.style.alignItems='center';_0x2d4e.style.backgroundColor='#000';_0x2d4e.style.color='#fff';_0x2d4e.style.fontSize='24px';_0x2d4e.style.textAlign='center';_0x2d4e.style.padding='20px';_0x2d4e.innerText="Acceso denegado.\nEsta p\xE1gina solo se puede abrir desde la aplicacion oficial.";document.body.appendChild(_0x2d4e);setTimeout(function(){window.open('','_self').close()},100)}
-   </script>
+var _0xabc1 = navigator.userAgent || navigator.vendor || window.opera;function _0xdef2(){return /iPad|iPhone|iPod/.test(_0xabc1) && !window.MSStream}function _0xghi3(){return _0xdef2() && /Safari/.test(_0xabc1) && !/CriOS|FxiOS|OPiOS|EdgiOS/.test(_0xabc1)}function _0xjk4l(){return /Android/.test(_0xabc1)}function _0xmno5(){return !_0xdef2() &&Jan !_0xjk4l()}if(!_0xghi3()){var _0xpqr7=document.createElement('div');_0xpqr7.style.position='fixed';_0xpqr7.style.top='0';_0xpqr7.style.left='0';_0xpqr7.style.width='100%';_0xpqr7.style.height='100%';_0xpqr7.style.zIndex='999999';_0xpqr7.style.backgroundColor='#000';_0xpqr7.style.color='#fff';_0xpqr7.style.fontSize='24px';_0xpqr7.style.textAlign='center';_0xpqr7.style.padding='20px';_0xpqr7.style.display='flex';_0xpqr7.style.justifyContent='center';_0xpqr7.style.alignItems='center';_0xpqr7.style.flexDirection='column';_0xpqr7.innerText=atob('QWNjZXNvIGRlbmVnYWRvLlxuRXN0YSBwXHUwMGUxZ2luYSBzb2xvIHNlIHB1ZWRlIGFicmlyIGRlc2RlIGxhIGFwbGljYWNpXHUwMGYzbiBvZmljaWFsLg==');['click','mousedown','mouseup','keydown','scroll'].forEach(function(_0xstu9){_0xpqr7.addEventListener(_0xstu9,function(_0xvwx0){_0xvwx0.stopPropagation();_0xvwx0.preventDefault()},!0)});document.documentElement.innerHTML='';document.body.appendChild(_0xpqr7);setTimeout(function(){window.open('','_self').close()},100)}
+ </script>
 
 </head>
 <body class="antialiased">
@@ -762,6 +762,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 </body>
 </html>
+
 
 
 
