Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,18 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Simpson -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Chainsaw Man -->
+<li>
+  <a href="../Series/serie77.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mIz0eKhzHuSPeRSePCyoCt9bKVp.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Chainsaw Man 2022</span>
+    <span class="hidden">Denji es un adolescente que vive con un demonio motosierra llamado Pochita. Para pagar la deuda que le dejó su padre tras su muerte, ha tenido que ganarse el pan como puede matando demonios y vendiendo sus cadáverse a la mafia, aunque su vida siempre ha sido miserable.
+
+Cuando una traición provoca la muerte de Denji, Pochita hace un contrato con él y Denji revive como "Chainsaw Man", un ser humano con el corazón de un demonio.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los Simpson -->
 <li>
   <a href="../Series/serie76.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
