Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Chainsaw Man -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Demon Slayer: Kimetsu no Yaiba -->
+<li>
+  <a href="../Series/serie78.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/inXU5hvbDbitrYOgLrq2QjYqiJD.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Demon Slayer: Kimetsu no Yaiba 2019</span>
+    <span class="hidden">En la era Taisho de Japón, Tanjiro, un joven vendedor de carbón, descubre que su familia ha sido asesinada por un demonio. Su hermana Nezuko, la única superviviente, se ha convertido en demonio. Tanjiro decide convertirse en cazador de demonios para devolver a su hermana a la normalidad y vengar a su familia</span>
+  </a>
+</li>
+<!--FIN--><!-- Chainsaw Man -->
 <li>
   <a href="../Series/serie77.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
