--- a/Categorias/crimen/index.html
+++ b/Categorias/crimen/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mi pobre y dulce angelito -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los dias -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie79.html">
+    <img src="https://image.tmdb.org/t/p/original/og0fsHozYygCZgdmznwupk0xC4O.jpg" alt="Los días" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los días</div>
+  <div class="text-xs text-white/70">2023</div>
+</article><!-- Mi pobre y dulce angelito -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula687.html">
     <img src="https://image.tmdb.org/t/p/original/5K7qxX77PJXWuzkZD8rOBduCEKo.jpg" alt="Mi pobre y dulce angelito" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
