--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Demon Slayer: Kimetsu no Yaiba -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los dias -->
+<li>
+  <a href="../Series/serie79.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/og0fsHozYygCZgdmznwupk0xC4O.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los días 2023</span>
+    <span class="hidden">Para algunos son culpables, para otros son héroes. Los implicados en la central nuclear de Fukushima enfrentan una amenaza mortal e invisible: una catástrofe sin precedentes.</span>
+  </a>
+</li>
+<!--FIN--><!-- Demon Slayer: Kimetsu no Yaiba -->
 <li>
   <a href="../Series/serie78.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
