--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -130,7 +130,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/og0fsHozYygCZgdmznwupk0xC4O.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Los días 2023</span>
-    <span class="hidden">Para algunos son culpables, para otros son héroes. Los implicados en la central nuclear de Fukushima enfrentan una amenaza mortal e invisible: una catástrofe sin precedentes.</span>
+    <span class="hidden">los dias the days Para algunos son culpables, para otros son héroes. Los implicados en la central nuclear de Fukushima enfrentan una amenaza mortal e invisible: una catástrofe sin precedentes.</span>
   </a>
 </li>
 <!--FIN--><!-- Demon Slayer: Kimetsu no Yaiba -->
