Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los dias -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- The Umbrella Academy -->
+<li>
+  <a href="../Series/serie80.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/5rhtcR1xl1tSmH3FcMH3IJ8gNGC.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">The Umbrella Academy 2019</span>
+    <span class="hidden">La muerte de su padre reúne a unos hermanos distanciados y con extraordinarios poderes que descubren impactantes secretos y una amenaza que se cierne sobre la humanidad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los dias -->
 <li>
   <a href="../Series/serie79.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
