--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -130,7 +130,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/5rhtcR1xl1tSmH3FcMH3IJ8gNGC.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">The Umbrella Academy 2019</span>
-    <span class="hidden">La muerte de su padre reúne a unos hermanos distanciados y con extraordinarios poderes que descubren impactantes secretos y una amenaza que se cierne sobre la humanidad.</span>
+    <span class="hidden">la academia del paraguas La muerte de su padre reúne a unos hermanos distanciados y con extraordinarios poderes que descubren impactantes secretos y una amenaza que se cierne sobre la humanidad.</span>
   </a>
 </li>
 <!--FIN--><!-- Los dias -->
