--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- The Umbrella Academy -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Chappie -->
+<li>
+  <a href="../Peliculas/pelicula691.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/g2kVBpRljENCi8KskBi0tedK3UE.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Chappie 2015</span>
+    <span class="hidden">En un futuro cercano, el crimen es combatido por una fuerza de policías robots. Uno de estos robots, llamado Chappie, es secuestrado por un grupo de delincuentes que le instalan un nuevo programa que lo convertirá en el primer robot capaz de tener pensamientos y sentimientos propios.</span>
+  </a>
+</li>
+<!--FIN--><!-- The Umbrella Academy -->
 <li>
   <a href="../Series/serie80.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
