Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Chappie -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Apocalipsis Z: el principio del fin -->
+<li>
+  <a href="../Peliculas/pelicula692.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jaBToJ1DZcwn5wOsQeLOXFVlBLn.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Apocalipsis Z: el principio del fin 2024</span>
+    <span class="hidden">Cuando una especie de rabia que transforma a la gente en criaturas agresivas se extiende por el planeta, Manel se aísla en casa con su gato, recurriendo a su ingenio para sobrevivir; pero pronto deberán salir a buscar comida, por tierra y por mar, sorteando muchos peligros.</span>
+  </a>
+</li>
+<!--FIN--><!-- Chappie -->
 <li>
   <a href="../Peliculas/pelicula691.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
