Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Apocalipsis Z: el principio del fin -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Wonka -->
+<li>
+  <a href="../Peliculas/pelicula693.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6eHcR7zwvNSvkOl9jbctU0lvZQ1.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Wonka 2023</span>
+    <span class="hidden">Willy Wonka, repleto de ideas y decidido a cambiar el mundo con un delicioso bocado a la vez, es una prueba de que las mejores cosas de la vida comienzan con un sueño y, si tienes la suerte de conocer a Willy Wonka, todo es posible.</span>
+  </a>
+</li>
+<!--FIN--><!-- Apocalipsis Z: el principio del fin -->
 <li>
   <a href="../Peliculas/pelicula692.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
