Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Wonka -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Lo que una chica quiere -->
+<li>
+  <a href="../Peliculas/pelicula694.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/pSwg5LnbVoAtalbKkYFfx2Wo6fQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Lo que una chica quiere 2003</span>
+    <span class="hidden">Daphne Reynolds es una adolescente que viaja de Nueva York a Londres para ver a su padre, un político que pertenece a la aristocracia y que proyecta casarse con una mujer detestable. Lo que Daphne se propone es conseguir que sus padres vuelvan a estar juntos de nuevo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Wonka -->
 <li>
   <a href="../Peliculas/pelicula693.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
