Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Al borde de la extincion -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 50 Sombras muy Oscuras -->
+<li>
+  <a href="../Peliculas/pelicula698.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/eXxEz9GNVzbSUFvO5cEbpVsJbpw.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">50 Sombras muy Oscuras 2016</span>
+    <span class="hidden">Parodia de 50 sombras de Grey. A Hannah le asignan entrevistar a un empresario, Christian Black. La inocente chica comprende cuánto le desea. Cuando la pareja por fin inicia la caliente relación, ella se sorprende con las peculiares prácticas eróticas de él. 50 sombras de Black es una película de comedia dirigida por Michael Tiddes y protagonizada por Marlon Wayans, quien también es productor y escritor de la película.</span>
+  </a>
+</li>
+<!--FIN--><!-- Al borde de la extincion -->
 <li>
   <a href="../Peliculas/pelicula697.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
