Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 50 Sombras muy Oscuras -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El ejercito de los ladrones -->
+<li>
+  <a href="../Peliculas/pelicula699.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/caAsCr4sDFUXAny77fOJJz60hom.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El ejército de los ladrones 2021</span>
+    <span class="hidden">Una misteriosa mujer recluta a Dieter, un empleado bancario, para que ayude a su equipo a abrir tres bóvedas en Europa.</span>
+  </a>
+</li>
+<!--FIN--><!-- 50 Sombras muy Oscuras -->
 <li>
   <a href="../Peliculas/pelicula698.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
